# apples2oranges

./: .gitignore  CODE_OF_CONDUCT.md  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: generation.rs  utils.rs
src-tauri/src/hardware/: cpu_monitor.rs  macmon.rs  mod.rs  temperature.rs
src-tauri/src/inference/: generation.rs  mod.rs  sampler_builder.rs
src-tauri/src/persistence/: compression.rs  database.rs  mod.rs  models.rs
src-tauri/src/telemetry/: mod.rs  power_calculator.rs  processor.rs  types.rs
src-tauri/src/utils/: debug.rs
src/components/charts/: ChartModal.tsx  SelectableChart.tsx
src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageEditor.tsx  MessageItem.tsx  MessageList.tsx  StreamingResponse.tsx
src/components/config/: ConfigurationPanel.tsx  ModelConfigPanel.tsx  SamplingParameterControl.tsx  SystemPromptEditor.tsx  TelemetryConfigPanel.tsx
src/components/layout/: AppHeader.tsx  LeftSidebar.tsx  RightSidebar.tsx
src/hooks/: useChartContainer.tsx  useChatHandlers.ts  useOverlayTelemetry.ts  useSessionState.ts  useTauriEventListeners.ts  useWindowEventHandlers.ts
src/services/: sessionPersistence.ts
src/stores/: chatStore.ts  index.ts  modelStore.ts  telemetryStore.ts  uiStore.ts
src/types/: charts.ts  telemetry.ts
src/utils/: contextLengthOptions.ts  debug.ts  sessionStorage.ts
(+48 files in other folders)
