[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
llama-cpp-2 = "0.1"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.31"
encoding_rs = "0.8"
libc = "0.2"
lazy_static = "1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
lz4_flex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
